# Lumo-Notes

./: .gitignore  README.md  RELEASE_CHECKLIST.md  SECURITY_CHECKLIST.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Project Aurora.md  lumo-notes-backup-2026-05-05.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypto.rs  db.rs  file_io.rs  lib.rs  main.rs
src/components/: BrandMark.tsx  CommandPalette.tsx  ConfirmProvider.tsx  Editor.tsx  GraphView.tsx  ImportExportActions.tsx  InsightsPanel.tsx  MarkdownPreview.tsx  NoteCard.tsx  NotesList.tsx  RichTextEditor.tsx  RichTextPreview.tsx  SectionHeader.tsx  SettingsScreen.tsx  Sidebar.tsx  ToastProvider.tsx  TopMenuBar.tsx  editorExtensions.ts
src/components/icons/: AppIcons.tsx  FavoriteHeartIcon.tsx  FocusIcon.tsx  InsightsIcon.tsx  PinIcon.tsx
src/data/: initialNotes.ts  mockData.ts
src/services/: database.ts  fileTransfer.ts  settings.ts
src/store/: notesStore.tsx  settingsStore.tsx
src/types/: note.ts  settings.ts
src/utils/: confirm.ts  date.ts  folderColor.ts  links.ts  markdown.ts  richTextMarkdown.ts  toast.ts
