[package]
name = "lumo-notes"
version = "0.1.0"
description = "Local-first note-taking app"
authors = ["DiesIrae2807"]
edition = "2026"

[lib]
name = "lumo_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
